# matjongwon

./: .gitignore  README.md  kakaomap_scraper.py  naver_scraper.py  scraper.py
backend/: README.md  gcp_key  pyproject.toml
backend/backend/: db.sqlite3  db_settings.py  settings.py  urls.py
backend/backend/backend/: settings.py  urls.py
backend/backend/placeUpdater/: updater.py
backend/backend/v1/: models.py  urls.py  views.py
backend/backend/v1/management/commands/: loadjson.py  run_loadjson.py
backend/backend/v1/migrations/: 0001_initial.py  0002_rename_naver_score_place_tripadvisor_score.py  0003_remove_place_google_score_remove_place_kakao_score_and_more.py
backend/kakaocallback/: apps.py  urls.py  views.py
crawler/: kakaomap_crawling.py
data/: combine_contents.json  naver_contents.json
frontend/: .env.development  .eslintrc.js  README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js  router.js
frontend/src/components/: BaseAlert.vue  BaseSlider.vue  KakaoMap.vue  StoreCard.vue
frontend/src/layout/: AppFooter.vue  AppHeader.vue
frontend/src/plugins/: globalComponents.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: KakaoAuth.vue  KakaoLogin.vue  Login.vue  Main.vue  MainList.vue  (+3 more)
scrapers/: README.md  kakaomap_scraper.py  naver_scraper.py  search_googlemap.py  search_kakaomap.py  tripadvisor_scraper.py
scrapers/data/: combine_contents.json  final_contents.json  kakaomap_contents.json  naver_contents.json  new_combine_contents.json  tripadvisor_contents.json
(+3 files in other folders)
