[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Saron Kim <kasrlmoojoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
jsonfield = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
