[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Saron Kim <kasrlmoojoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
jsonfield = "^3.1.0"
APScheduler = "^3.9.1.post1"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
